trunk/Archive2/72/ef5c7b19533eed/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In instantiation of 'A::A(T) [with T = int; <template-parameter-1-2> = void]':
main.cpp:17:13:   required from here
main.cpp:10:9: error: static assertion failed: Unsigned values cannot be accepted
         static_assert(!std::numeric_limits<T>::is_signed, "Unsigned values cannot be accepted");
         ^
